--- a/User/Cart/cart.html
+++ b/User/Cart/cart.html
@@ -13,25 +13,39 @@
         
     </head>
     <body>
-        <center><h1>CART DETAILS</h1><br><br>
+        <center><h1>CART DETAILS</h1><br>
             <h3>Products in cart</h3><br>
             <table class="table table-bordered table-primary">
                 <thead>
                     <th scope = "col">Product</th>
                     <th scope = "col">Product Name</th>
                     <th scope = "col">Quantity</th>
-                    <th scope = "col">Price</th>
+                    <th scope = "col">Price (in INR)</th>
                     <th scope = "col"></th>
                 </thead>
                 <tbody>
                     <tr>
-                        <td><img src="" alt="Pedigree"></td>
-                        <td>Pedigree</td>
-                        <td></td>
+                        <td style="width: 20%;"><img src="images/pedigree.jpg" alt="Pedigree"></td>
+                        <td style="width: 20%;">Pedigree</td>
+                        <td style="width: 20%;"></td>
+                        <td style="width: 20%;">345</td>
+                        <td style="width: 20%;"><center><button type="button" class="btn btn-primary">Buy</button></center></td>
+                    </tr>
+
+                    <tr>
+                        <td style="width: 20%;"><img src="images/pedigree.jpg" alt="Pedigree"></td>
+                        <td style="width: 20%;">Pedigree</td>
+                        <td style="width: 20%;"></td>
+                        <td style="width: 20%;">345</td>
+                        <td style="width: 20%;"><center><button type="button" class="btn btn-primary">Buy</button></center></td>
                     </tr>
                 </tbody>
-            </thead>
+            </table>
         </center>
+        <div class="text-center">
+            <button type="button" class="btn btn-danger">Make Payment</button>
+        </div>
+
     </body>
 </html>
 
@@ -72,4 +86,3 @@
 </script>
 
 
-ref: https://codepen.io/anitaparmar26/details/BaLYMeN
