--- a/User/Cart/cart.html
+++ b/User/Cart/cart.html
@@ -27,7 +27,13 @@
                     <tr>
                         <td style="width: 20%;"><img src="images/pedigree.jpg" alt="Pedigree"></td>
                         <td style="width: 20%;">Pedigree</td>
-                        <td style="width: 20%;"></td>
+                        <td style="width: 20%;">
+                            <div class="input-group w-auto justify-content-end align-items-center">
+                               <input type="button" value="-" class="button-minus border rounded-circle  icon-shape icon-sm mx-1 " data-field="quantity">
+                               <input type="number" step="1" max="10" value="1" name="quantity" class="quantity-field border-0 text-center w-25">
+                               <input type="button" value="+" class="button-plus border rounded-circle icon-shape icon-sm lh-0" data-field="quantity">
+                            </div>
+                        </td>
                         <td style="width: 20%;">345</td>
                         <td style="width: 20%;"><center><button type="button" class="btn btn-primary">Buy</button></center></td>
                     </tr>
@@ -45,7 +51,7 @@
         <div class="text-center">
             <button type="button" class="btn btn-danger">Make Payment</button>
         </div>
-
+        
     </body>
 </html>
 
