--- a/User/Home/User_home.html
+++ b/User/Home/User_home.html
@@ -49,25 +49,29 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="dog_cato1.png" class="card-img-top">
+                        <img src="Images/dog_cato1.png" class="card-img-top">
                         <div class="card-body text-center">
                           <h5 class="card-title">Dog accessories</h5>
+                          <a href="#" class="btn signin">Add To Cart</a>
                         </div>
                       </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="cat_cato1.png" class="card-img-top">
+                        <img src="Images/cat_cato1.png" class="card-img-top">
                         <div class="card-body text-center">
                           <h5 class="card-title">Cat accessories</h5>
+                          <a href="#" class="btn signin">Add To Cart</a>
                         </div>
                       </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="img3.png" class="card-img-top">
+                        <img src="Images/logo.jpeg" class="card-img-top">
                         <div class="card-body text-center">
                           <h5 class="card-title">All Products</h5>
+                          <a href="#" class="btn signin">See all Products--></a>
+
                         </div>
                       </div>
                 </div>
