--- a/User/Cart/payment.html
+++ b/User/Cart/payment.html
@@ -2,7 +2,7 @@
     <div class="col-75">
       <div class="container">
         <form action="/action_page.php">
-            <link rel="stylesheet" type="text/css" href="css.css" />
+            <link rel="stylesheet" type="text/css" href="cartstyle.css" />
    <div class="col-50">
               <h3>Payment</h3>
               <label for="fname">Accepted Cards</label>
