--- a/User/product_management/more_js.html
+++ b/User/product_management/more_js.html
@@ -62,7 +62,7 @@
   </div>
 </nav>
 
-<h2>PORTFOLIO</h2>
+<h2>PAWS AND TAILS</h2>
 
 <div id="myBtnContainer">
   <button class="btn active" onclick="filterSelection('all')"> Show all</button>
