--- a/User/Home/User_home.html
+++ b/User/Home/User_home.html
@@ -11,7 +11,10 @@
         <!--Navigation_Bar-->
         <nav class="navbar navbar-expand-lg navbar-dark" id="navbar">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Paws and Tails</a>
+                <div class= "logo">
+                    <img src="Images/logo.png" height="80" width="80">
+                </div>
+              <a class="navbar-brand" href="#"><i>Paws and Tails</i></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-expanded="false" >
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -30,6 +33,7 @@
                     <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                   </form>
+                  <button class="btn p-2 my-lg-0 my-2">cart</button>
                   <button class="btn p-2 my-lg-0 my-2">Sign In</button>
             </div>
           </nav>
@@ -52,7 +56,7 @@
                         <img src="Images/dog_cato1.png" class="card-img-top">
                         <div class="card-body text-center">
                           <h5 class="card-title">Dog accessories</h5>
-                          <a href="#" class="btn signin">Add To Cart</a>
+                          <a href="#" class="btn signin">Dog accessories</a>
                         </div>
                       </div>
                 </div>
@@ -61,7 +65,7 @@
                         <img src="Images/cat_cato1.png" class="card-img-top">
                         <div class="card-body text-center">
                           <h5 class="card-title">Cat accessories</h5>
-                          <a href="#" class="btn signin">Add To Cart</a>
+                          <a href="#" class="btn signin">Cat accessories</a>
                         </div>
                       </div>
                 </div>
