--- a/Admin/admin_login.html
+++ b/Admin/admin_login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="styleproduct.css">
+<link rel="stylesheet" href="style.css">
 <title> ADMIN LOGIN </title>
 </head>
 <body>
