--- a/User/Home/User_home.html
+++ b/User/Home/User_home.html
@@ -14,7 +14,7 @@
                 <div class= "logo">
                     <img src="Images/logo.png" height="80" width="80">
                 </div>
-              <a class="navbar-brand" href="#"><i>Paws and Tails</i></a>
+              <a class="navbar-brand" href="#" >Paws and Tails</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-expanded="false" >
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -31,9 +31,9 @@
                   </li>
                   <form class="d-flex" role="search">
                     <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <button class="btn p-2 my-lg-0 my-2" type="submit">Search</button>
                   </form>
-                  <button class="btn p-2 my-lg-0 my-2">cart</button>
+                  <button class="btn p-2 my-lg-0 my-2"><a href="cartnew.html">cart</a></button>
                   <button class="btn p-2 my-lg-0 my-2">Sign In</button>
             </div>
           </nav>
