--- a/User/product_management/cat_prods.html
+++ b/User/product_management/cat_prods.html
@@ -44,41 +44,31 @@
 
         <section id="product">
             <div class="container m-5">
-              <h1 class="text-center my-5">DOG PRODUCTS</h1>
+              <h1 class="text-center my-5">CAT PRODUCTS</h1>
               <div class="row">
                   <div class="col-lg-4 col-md-4 col-12">
                       <div class="card">
-                          <img src="Images/pedigree.jpg" class="card-img-top">
+                          <img src="Catimage/Purepet.jpg" class="card-img-top">
                           <div class="card-body text-center">
-                            <h5 class="card-title">PEDIGREE</h5>
+                            <h5 class="card-title">Purepet</h5>
                             <a href="#" class="btn signin">Add To Cart</a>
                           </div>
                         </div>
                   </div>
                   <div class="col-lg-4 col-md-4 col-12">
                       <div class="card">
-                          <img src="Images/supercoat.jpg" class="card-img-top">
+                          <img src="Catimage/Lava_junior.png" class="card-img-top">
                           <div class="card-body text-center">
-                            <h5 class="card-title">SUPERCOAT</h5>
+                            <h5 class="card-title">Lara Junior</h5>
                             <a href="#" class="btn signin">Add To Cart</a>
                           </div>
                         </div>
                   </div>
                   <div class="col-lg-4 col-md-4 col-12">
                       <div class="card">
-                          <img src="Images/Royalcanin.jpg" class="card-img-top">
+                          <img src="Catimage/Whiskar.jpg" class="card-img-top">
                           <div class="card-body text-center">
-                            <h5 class="card-title">ROYALCANIN</h5>
-                            <a href="#" class="btn signin">Add To Cart</a>
-  
-                          </div>
-                        </div>
-                  </div>
-                  <div class="col-lg-4 col-md-4 col-12">
-                      <div class="card">
-                          <img src="Images/Himalaya Erine-Ep.jpg" class="card-img-top">
-                          <div class="card-body text-center">
-                            <h5 class="card-title">HIMALAYA_ERINA-EP</h5>
+                            <h5 class="card-title">Whiskar</h5>
                             <a href="#" class="btn signin">Add To Cart</a>
   
                           </div>
@@ -86,9 +76,9 @@
                   </div>
                   <div class="col-lg-4 col-md-4 col-12">
                       <div class="card">
-                          <img src="Images/Petshine.jpg" class="card-img-top">
+                          <img src="Catimage/Zoivane.png" class="card-img-top">
                           <div class="card-body text-center">
-                            <h5 class="card-title">PETSHINE</h5>
+                            <h5 class="card-title">Zoivane</h5>
                             <a href="#" class="btn signin">Add To Cart</a>
   
                           </div>
@@ -96,9 +86,19 @@
                   </div>
                   <div class="col-lg-4 col-md-4 col-12">
                       <div class="card">
-                          <img src="Images/TickFree.jpg" class="card-img-top">
+                          <img src="Catimage/Lozalo.jpg" class="card-img-top">
                           <div class="card-body text-center">
-                            <h5 class="card-title">TICKFREE</h5>
+                            <h5 class="card-title">Lozalo</h5>
+                            <a href="#" class="btn signin">Add To Cart</a>
+  
+                          </div>
+                        </div>
+                  </div>
+                  <div class="col-lg-4 col-md-4 col-12">
+                      <div class="card">
+                          <img src="Catimage/Lilio_soap.jpg" class="card-img-top">
+                          <div class="card-body text-center">
+                            <h5 class="card-title">Lilio</h5>
                             <a href="#" class="btn signin">Add To Cart</a>
   
                           </div>
