--- a/User/Cart/payment.html
+++ b/User/Cart/payment.html
@@ -1,7 +1,14 @@
 
 ,<center>
+  <style>
+    body {
+       background-image: url("/user/Home/Images/logo.jpeg");
+    }
+  </style>
+
 <div class="row">
     <div class="col-75">
+      
       <div class="container">
        <!-- <form action="/action_page.php">-->
             <link rel="stylesheet" type="text/css" href="paymentstyle.css" />
