--- a/User/Home/User_home.html
+++ b/User/Home/User_home.html
@@ -33,7 +33,7 @@
                     <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn p-2 my-lg-0 my-2" type="submit">Search</button>
                   </form>
-                  <button class="btn p-2 my-lg-0 my-2"><a href="cartnew.html">cart</a></button>
+                  <button class="btn p-2 my-lg-0 my-2">cart</button>
                   <button class="btn p-2 my-lg-0 my-2">Sign In</button>
             </div>
           </nav>
