--- a/User/Cart/cartnew.html
+++ b/User/Cart/cartnew.html
@@ -74,7 +74,7 @@
                 <span>Net amount</span>
                 <span>₹ 1,550</span>
               </p>
-              <center><button type="button" class="btn btn-danger">Proceed to checkout</button></center>
+              <center><button type="button" class="btn btn-danger" onclick="myfn()">Proceed to checkout</a></button></center>
             </div>
           </div>
         
@@ -83,3 +83,8 @@
 </body>
 
 </html>
+<script>
+  function myfn(){
+    window.location.href = "payment.html";
+  }
+</script>
