--- a/User/Home/User_home.html
+++ b/User/Home/User_home.html
@@ -31,10 +31,17 @@
                   </li>
                   <form class="d-flex" role="search">
                     <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn p-2 my-lg-0 my-2" type="submit">Search</button>
+                    <button class="btn p-2 my-lg-0 my-2" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                      </svg>&nbsp Search</button>
                   </form>
-                  <button class="btn p-2 my-lg-0 my-2"><a href="../Cart/cartnew.html">cart</a></button>
-                  <button class="btn p-2 my-lg-0 my-2">Sign In</button>
+                  <button class="btn p-2 my-lg-0 my-2"><a href="../Cart/cartnew.html" style="text-decoration: none; color:black"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+                    <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+                  </svg>&nbsp Cart</a></button>
+                  <button class="btn p-2 my-lg-0 my-2"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                  </svg>&nbsp Sign In</button>
             </div>
           </nav>
 
@@ -74,7 +81,7 @@
                         <img src="Images/logo.jpeg" class="card-img-top">
                         <div class="card-body text-center">
                           <h5 class="card-title">All Products</h5>
-                          <a href="#" class="btn signin">See all Products--></a>
+                          <a href="#" class="btn signin">See all Products </a>
                         </div>
                       </div>
                 </div>
