--- a/Admin/prod_mgmt.html
+++ b/Admin/prod_mgmt.html
@@ -45,8 +45,8 @@
                                   </ul>
                                   <div class="side-content">
                                     <h3>Navigations</h3><br>
-                                    <button type="button" class="btn btn-primary">Coupons</button>
-                                    <button type="button" class="btn btn-primary">Events</button>
+                                    <button type="button" class="btn btn-primary"><a href="../coupon.html" style="text-decoration: none; color:black">Coupons</a></button>
+                                    <button type="button" class="btn btn-primary"><a href="../event.html" style="text-decoration: none; color:black">Events</a></button>
                                   </div>
                               </div>
                           </aside>
@@ -58,7 +58,7 @@
                               <div class="product-top d-flex justify-content-between align-items-center">
                                   <div class="product-sec product-item">
                                       <h2 class="my-5">Pet Products
-                                        <button type="button" class="btn btn-primary">Add</button>
+                                        <button type="button" class="btn btn-primary"><a href="../Admin/add.html" style="text-decoration: none; color:black">Add</a></button>
                                       </h2>
                                   </div>
                               </div>
@@ -74,7 +74,7 @@
                       <div class="product-des">
                           <h5> Pedigree</h5>
                           <p>INR 450.00</p>
-                          <button type="button" class="btn btn-primary">Update</button>
+                          <button type="button" class="btn btn-primary"><a href="../Admin/update.html" style="text-decoration: none; color:black">Update</a></button>
                           <button type="button" class="btn btn-danger">Remove</button>
                       </div>
                       </div>
@@ -92,7 +92,7 @@
                               <div class="product-des">
                                   <h5> Whiskas</h5>
                                   <p>INR 1450.00</p>
-                                  <button type="button" class="btn btn-primary">Update</button>
+                                  <button type="button" class="btn btn-primary"><a href="../Admin/update.html" style="text-decoration: none; color:black">Update</a></button>
                                     <button type="button" class="btn btn-danger">Remove</button>
                               </div>
                               </div>
@@ -110,7 +110,7 @@
                                       <div class="product-des">
                                           <h5>Fidele</h5>
                                           <p>INR 700.00</p>
-                                          <button type="button" class="btn btn-primary">Update</button>
+                                          <button type="button" class="btn btn-primary"><a href="../Admin/update.html" style="text-decoration: none; color:black">Update</a></button>
                                     <button type="button" class="btn btn-danger">Remove</button>
                                       </div>
                                       </div>
