--- a/User/Cart/cartnew.html
+++ b/User/Cart/cartnew.html
@@ -85,6 +85,6 @@
 </html>
 <script>
   function myfn(){
-    window.location.href = "payment.html";
+    window.location.href = "paymnt.html";
   }
 </script>
