--- a/User/Home/User_home.html
+++ b/User/Home/User_home.html
@@ -65,7 +65,7 @@
                         <img src="Images/dog_cato1.png" class="card-img-top">
                         <div class="card-body text-center">
                           <h5 class="card-title">Dog accessories</h5>
-                          <a href="#" class="btn signin">Dog accessories</a>
+                          <a href="#" class="btn signin"><a href="../product_management/dog_prods.html" style="text-decoration: none; color:black">Dog accessories</a>
                         </div>
                       </div>
                 </div>
@@ -74,7 +74,7 @@
                         <img src="Images/cat_cato1.png" class="card-img-top">
                         <div class="card-body text-center">
                           <h5 class="card-title">Cat accessories</h5>
-                          <a href="#" class="btn signin">Cat accessories</a>
+                          <a href="#" class="btn signin"><a href="../product_management/cat_prods.html" style="text-decoration: none; color:black">Cat accessories</a>
                         </div>
                       </div>
                 </div>
