--- a/Admin/prod_mgmt.html
+++ b/Admin/prod_mgmt.html
@@ -84,7 +84,7 @@
                           <div class="col-lg-4 col-sm-6">
                             <div class="product-cate">
                               <div>
-                           <img src="images/pedigree.jpg"alt="">
+                           <img src="../User/Cart/images/whiskas.jfif"alt="">
                            <div class="product-icon">
                               
                               </div>
