--- a/User/product_management/cat_prods.html
+++ b/User/product_management/cat_prods.html
@@ -59,7 +59,7 @@
                       <div class="card">
                           <img src="Catimage/Purepet.jpg" class="card-img-top">
                           <div class="card-body text-center">
-                            <h5 class="card-title">Purepet</h5>
+                            <h5 class="card-title">Purepet<br> Rs. 250</h5>
                             <a href="#" class="btn signin">Add To Cart</a>
                           </div>
                         </div>
@@ -68,7 +68,7 @@
                       <div class="card">
                           <img src="Catimage/Lava_junior.png" class="card-img-top">
                           <div class="card-body text-center">
-                            <h5 class="card-title">Lara Junior</h5>
+                            <h5 class="card-title">Lara Junior<br> Rs. 300</h5>
                             <a href="#" class="btn signin">Add To Cart</a>
                           </div>
                         </div>
@@ -77,7 +77,7 @@
                       <div class="card">
                           <img src="Catimage/Whiskar.jpg" class="card-img-top">
                           <div class="card-body text-center">
-                            <h5 class="card-title">Whiskar</h5>
+                            <h5 class="card-title">Whiskar<br> Rs. 450</h5>
                             <a href="#" class="btn signin">Add To Cart</a>
   
                           </div>
@@ -87,7 +87,7 @@
                       <div class="card">
                           <img src="Catimage/Zoivane.png" class="card-img-top">
                           <div class="card-body text-center">
-                            <h5 class="card-title">Zoivane</h5>
+                            <h5 class="card-title">Zoivane<br> Rs. 674</h5>
                             <a href="#" class="btn signin">Add To Cart</a>
   
                           </div>
@@ -97,7 +97,7 @@
                       <div class="card">
                           <img src="Catimage/Lozalo.jpg" class="card-img-top">
                           <div class="card-body text-center">
-                            <h5 class="card-title">Lozalo</h5>
+                            <h5 class="card-title">Lozalo<br> Rs. 644</h5>
                             <a href="#" class="btn signin">Add To Cart</a>
   
                           </div>
@@ -107,7 +107,7 @@
                       <div class="card">
                           <img src="Catimage/Lilio_soap.jpg" class="card-img-top">
                           <div class="card-body text-center">
-                            <h5 class="card-title">Lilio</h5>
+                            <h5 class="card-title">Lilio<br> Rs. 284</h5>
                             <a href="#" class="btn signin">Add To Cart</a>
   
                           </div>
