--- a/User/product_management/dog_prods.html
+++ b/User/product_management/dog_prods.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">Home</a>
+                  <a class="nav-link active" href="../Home/User_home.html" style="text-decoration: none; color:white">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="#">Categories</a>
@@ -59,7 +59,7 @@
                       <div class="card">
                           <img src="Images/pedigree.jpg" class="card-img-top">
                           <div class="card-body text-center">
-                            <h5 class="card-title">PEDIGREE</h5>
+                            <h5 class="card-title">PEDIGREE<br> Rs. 150</h5>
                             <a href="#" class="btn signin">Add To Cart</a>
                           </div>
                         </div>
@@ -68,7 +68,7 @@
                       <div class="card">
                           <img src="Images/supercoat.jpg" class="card-img-top">
                           <div class="card-body text-center">
-                            <h5 class="card-title">SUPERCOAT</h5>
+                            <h5 class="card-title">SUPERCOAT <br> Rs. 200 </h5>
                             <a href="#" class="btn signin">Add To Cart</a>
                           </div>
                         </div>
@@ -77,7 +77,7 @@
                       <div class="card">
                           <img src="Images/Royalcanin.jpg" class="card-img-top">
                           <div class="card-body text-center">
-                            <h5 class="card-title">ROYALCANIN</h5>
+                            <h5 class="card-title">ROYALCANIN<br> Rs. 400</h5>
                             <a href="#" class="btn signin">Add To Cart</a>
   
                           </div>
@@ -87,7 +87,7 @@
                       <div class="card">
                           <img src="Images/Himalaya Erine-Ep.jpg" class="card-img-top">
                           <div class="card-body text-center">
-                            <h5 class="card-title">HIMALAYA_ERINA-EP</h5>
+                            <h5 class="card-title">HIMALAYA_ERINA-EP<br> Rs. 600</h5>
                             <a href="#" class="btn signin">Add To Cart</a>
   
                           </div>
@@ -97,7 +97,7 @@
                       <div class="card">
                           <img src="Images/Petshine.jpg" class="card-img-top">
                           <div class="card-body text-center">
-                            <h5 class="card-title">PETSHINE</h5>
+                            <h5 class="card-title">PETSHINE<br> Rs. 729</h5>
                             <a href="#" class="btn signin">Add To Cart</a>
   
                           </div>
@@ -107,7 +107,7 @@
                       <div class="card">
                           <img src="Images/TickFree.jpg" class="card-img-top">
                           <div class="card-body text-center">
-                            <h5 class="card-title">TICKFREE</h5>
+                            <h5 class="card-title">TICKFREE<br> Rs. 499</h5>
                             <a href="#" class="btn signin">Add To Cart</a>
   
                           </div>
