--- a/Admin/admin_login.html
+++ b/Admin/admin_login.html
@@ -16,7 +16,7 @@
         <form class="login-form">
           <input type="text" placeholder="ADMIN ID"/>
           <input type="password" placeholder="PASSWORD"/>
-          <button>LOGIN</button>
+          <button><a href="prod_mgmt.html" style="text-decoration: none; color:black">LOGIN</a></button>
          </form>
       </div>
     </div>
