--- a/User/Home/User_home.html
+++ b/User/Home/User_home.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="Images/logo.png">
         <title> Paws and Tails</title>
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
