--- a/Admin/admin_login.html
+++ b/Admin/admin_login.html
@@ -5,9 +5,13 @@
 <title> ADMIN LOGIN </title>
 </head>
 <body>
-  <body>
-    <background-image:url('img_')
-    <div class="login-page">
+<body> 
+  
+<div class="logo">
+        <img src="Images/logo.png" style="float:left;" height="175" width="130"><br><br>
+        <h1>Paws and Tails</h1>
+  </div>
+  <div class="login-page">
       <div class="form">
         <div class="login">
           <div class="login-header">
