--- a/User/Home/User_home.html
+++ b/User/Home/User_home.html
@@ -63,25 +63,28 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/dog_cato1.png" class="card-img-top">
+                        <img src="Images/dog_cato1.png" class="card-img-top" style="padding-top: 10px;">
                         <div class="card-body text-center">
-                          <h5 class="card-title">Dog accessories</h5>
-                          <a href="#" class="btn signin"><a href="../product_management/dog_prods.html" style="text-decoration: none; color:black">Dog accessories</a>
+                          <h5 class="card-title" > Dog accessories</h5>
+                          <a href="#" class="btn signin"><a href="../product_management/dog_prods.html" style="text-decoration: none; color:black; padding-right: 26.35px;border-radius: 15px;">
+                            <button class="btn btn-primary" type="submit">Dog accessories</button></a>
                         </div>
                       </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/cat_cato1.png" class="card-img-top">
+                        <img src="Images/cat_cato1.png" class="card-img-top" style="padding-top: 10px;">
                         <div class="card-body text-center">
                           <h5 class="card-title">Cat accessories</h5>
-                          <a href="#" class="btn signin"><a href="../product_management/cat_prods.html" style="text-decoration: none; color:black">Cat accessories</a>
+                          <a href="#" class="btn signin"><a href="../product_management/cat_prods.html" style="text-decoration: none; color:black">
+                            <button class="btn btn-primary" type="submit" >Cat accessories</button></a>
+                            
                         </div>
                       </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <img src="Images/logo.jpeg" class="card-img-top">
+                        <img src="Images/logo.jpeg" class="card-img-top" style="padding-top: 10px;">
                         <div class="card-body text-center">
                           <h5 class="card-title">All Products</h5>
                           <a href="#" class="btn signin">See all Products </a>
