--- a/Admin/event.html
+++ b/Admin/event.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+</html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="event style.css">
+    <link rel="stylesheet" href="event.css">
     <title>EVENT MANAGEMENT</title>
 </head>
 <body>
-    <div style="padding: 25PX;">
-    <center><h1>EVENT MANAGEMENT</h1></center>
-    </div>
-      <div class="welcome-event"></div>
-    <main>
+    <div class="welcome-event"></div>
+<main>
         <section id="event">
             <h1 class="section-title">New Event</h1>
             <form class="form">
