--- a/Admin/admin_login.html
+++ b/Admin/admin_login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="adminlogin.css">
 <title> ADMIN LOGIN </title>
 </head>
 <body>
@@ -20,7 +20,7 @@
         <form class="login-form">
           <input type="text" placeholder="ADMIN ID"/>
           <input type="password" placeholder="PASSWORD"/>
-          <button><a href="prod_mgmt.html" style="text-decoration: none; color:black">LOGIN</a></button>
+          <button><a href="adminproduct.html" style="text-decoration: none; color:black">LOGIN</a></button>
          </form>
       </div>
     </div>
