--- a/Admin/CouponManage.html
+++ b/Admin/CouponManage.html
@@ -12,7 +12,8 @@
    }
    .couponContainer {
       border: 5px dashed hsl(0,0%,73%);
-      width: 80%;
+      width: 300px;
+      height: 420px;
       border-radius: 5px;
       margin: 0 auto;
      
@@ -39,6 +40,11 @@
    table{
     border-spacing: 20px;
    }
+   #img{
+      height: 200px;
+      width: 300px;
+
+   }
 </style>
 </head>
 <body>
@@ -49,7 +55,7 @@
 <div class="couponContainer">
 <div class="detailContainer">
 </div>
-<img src="Ddoimg.jpg">
+<img src="dogfood.jpg.jpg" id="img">
 <div class="detailContainer" style="background-color:white">
 <center><h2>Dog Food</h2></center>
 </div>
@@ -67,7 +73,7 @@ USE CODE <span class="promo">PAW50</span> TO GET 50% OFF ON YOUR ORDER
 <div class="couponContainer">
     <div class="detailContainer">
     </div>
-    <img src="C:\Users\syntel\Paws-and-tails\Admin\images.jpg">
+    <img src="images/accessories.jpg" id="img">
     <div class="detailContainer" style="background-color:white">
     <center><h2>Dog Accessories</h2></center>
     </div>
@@ -88,7 +94,7 @@ USE CODE <span class="promo">PAW50</span> TO GET 50% OFF ON YOUR ORDER
     <div class="couponContainer">
         <div class="detailContainer">
         </div>
-        <img src="Ddoimg.jpg">
+        <img src="images/cat food.jpg" id="img">
         <div class="detailContainer" style="background-color:white">
         <center><h2>Cat Food</h2></center>
         </div>
@@ -105,7 +111,7 @@ USE CODE <span class="promo">PAW50</span> TO GET 50% OFF ON YOUR ORDER
         <div class="couponContainer">
             <div class="detailContainer">
             </div>
-            <img src="Ddoimg.jpg">
+            <img src="images/cat accessories.jpg" id="img">
             <div class="detailContainer" style="background-color:white">
             <center><h2>Cat Accessories</h2></center>
             </div>
