--- a/User/Home/User_home.html
+++ b/User/Home/User_home.html
@@ -22,10 +22,10 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto">
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
+                    <a class="nav-link active" href="#home">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">Categories</a>
+                    <a class="nav-link active" href="#product">Categories</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="#">About</a>
