--- a/User/Signs/usersignin.html
+++ b/User/Signs/usersignin.html
@@ -13,6 +13,7 @@
             <hr>
             <p class="or">OR</p>
             <button type="button" class="signup-btn">Sign Up</button>
+            <a style = "font-size: 15px;" href="/Admin/admin_login.html" style="text-decoration:none ; color: black;">Admin</a>
             </form>
         </div>
     </body>
