--- a/User/Home/User_home.html
+++ b/User/Home/User_home.html
@@ -102,7 +102,7 @@
         <div class="container box my-5">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-12">
-                    <img src="/User/Home/Images/logo.png" class="img-fluid">
+                    <img src="/User/Home/Images/dog1.jpg" class="img-fluid">
                 </div>
                 <div class="col-lg-6 col-md-6 col-12">
                     <h1>CONTACT US</h1>
@@ -110,16 +110,15 @@
                         <input type="text" class="form-control" placeholder="Enter your name">
                         <input type="email" class="form-control" placeholder="Enter your mail">
                         <textarea class="form-control" placeholder="Enter your message"></textarea>
-                        <button class="btn signin">Send Message</button>
+                        <button class="btn btn-primary">Send Message</button>
                     </form>
                 </div>
             </div>
         </div>
   </section>
-<footer>Copyrights @frontendforever 2021</footer>
 
 
-    
+  
             <!-- JavaScript Bundle with Popper -->
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     </body>
