btn-color-changed

--- a/User/Cart/cartnew.html
+++ b/User/Cart/cartnew.html
@@ -93,7 +93,7 @@
               </p>
               <p>
                 <span>Coupons Available</span>
-                <span><button type="button" class="btn btn-danger">Check</button></span>
+                <span><button type="button" class="btn" style="background-color: green; color: white">Check</button></span>
               </p>
               <p>
                 <span>You Save</span>
@@ -103,7 +103,7 @@
                 <span>Net amount</span>
                 <span>₹ 1,550</span>
               </p>
-              <center><button type="button" class="btn btn-danger" onclick="myfn()">Proceed to checkout</a></button></center>
+              <center><button type="button" class="btn" style="background-color: green; color: white" onclick="myfn()">Proceed to checkout</a></button></center>
             </div>
           </div>
         
