--- a/Admin/updatecoupon.html
+++ b/Admin/updatecoupon.html
@@ -33,11 +33,11 @@
 <form>  
 
 
-<input type="text" placeholder="enter product name" name="product_name" class="box"> <input type="number" placeholder="enter product price" name="product_price" class="box">
+<input type="text" placeholder="Enter Coupon Name" name="product_name" class="box"> <input type="number" placeholder="Coupon Code" name="product_price" class="box">
 
 <input type="file" accept-"image/png, image/jpeg, image/jpg" name="product_image" class="box">
 
-<input type="submit" class="btn" name="add_product" value="Update Product">
+<input type="submit" class="btn" name="add_product" value="Update Coupon">
 
 </form>
 
