--- a/User/product_management/cat_prods.html
+++ b/User/product_management/cat_prods.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">Home</a>
+                  <a class="nav-link active" href="../Home/User_home.html" style="text-decoration: none; color:white">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="#">Categories</a>
@@ -60,7 +60,7 @@
                           <img src="Catimage/Purepet.jpg" class="card-img-top">
                           <div class="card-body text-center">
                             <h5 class="card-title">Purepet<br> Rs. 250</h5>
-                            <a href="#" class="btn signin">Add To Cart</a>
+                            <a href="#" class="btn btn-primary">BUY</a>
                           </div>
                         </div>
                   </div>
@@ -69,7 +69,7 @@
                           <img src="Catimage/Lava_junior.png" class="card-img-top">
                           <div class="card-body text-center">
                             <h5 class="card-title">Lara Junior<br> Rs. 300</h5>
-                            <a href="#" class="btn signin">Add To Cart</a>
+                            <a href="#" class="btn btn-primary">BUY</a>
                           </div>
                         </div>
                   </div>
@@ -78,7 +78,7 @@
                           <img src="Catimage/Whiskar.jpg" class="card-img-top">
                           <div class="card-body text-center">
                             <h5 class="card-title">Whiskar<br> Rs. 450</h5>
-                            <a href="#" class="btn signin">Add To Cart</a>
+                            <a href="#" class="btn btn-primary">BUY</a>
   
                           </div>
                         </div>
@@ -88,7 +88,7 @@
                           <img src="Catimage/Zoivane.png" class="card-img-top">
                           <div class="card-body text-center">
                             <h5 class="card-title">Zoivane<br> Rs. 674</h5>
-                            <a href="#" class="btn signin">Add To Cart</a>
+                            <a href="#" class="btn btn-primary">BUY</a>
   
                           </div>
                         </div>
@@ -98,7 +98,7 @@
                           <img src="Catimage/Lozalo.jpg" class="card-img-top">
                           <div class="card-body text-center">
                             <h5 class="card-title">Lozalo<br> Rs. 644</h5>
-                            <a href="#" class="btn signin">Add To Cart</a>
+                            <a href="#" class="btn btn-primary">BUY</a>
   
                           </div>
                         </div>
@@ -108,7 +108,7 @@
                           <img src="Catimage/Lilio_soap.jpg" class="card-img-top">
                           <div class="card-body text-center">
                             <h5 class="card-title">Lilio<br> Rs. 284</h5>
-                            <a href="#" class="btn signin">Add To Cart</a>
+                            <a href="#" class="btn btn-primary">BUY</a>
   
                           </div>
                         </div>
