--- a/User/Home/User_home.html
+++ b/User/Home/User_home.html
@@ -28,7 +28,7 @@
                     <a class="nav-link active" href="#product">Categories</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">About</a>
+                    <a class="nav-link active" href="#About">About</a>
                   </li>
                   <form class="d-flex" role="search">
                     <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search">
@@ -88,7 +88,7 @@
                         <div class="card-body text-center">
                           
                          <a href="#" class="btn signin" styles="text-decoration: none; color:black; padding-right: 26.35px;border-radius: 15px;">
-                            <button class="btn btn-primary" type="submit" >See All</button></a>
+                            <button class="btn btn-primary" type="submit" >Explore All</button></a>
                         </div>
                       </div>
                 </div>
@@ -98,11 +98,11 @@
       </section>
 
       <!--About-->
-      <section id="contact">
+      <section id="About">
         <div class="container box my-5">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-12">
-                    <img src="/User/Home/Images/logo.png" class="img-fluid">
+                    <img src="/User/Home/Images/dog1.jpg" class="img-fluid">
                 </div>
                 <div class="col-lg-6 col-md-6 col-12">
                     <h1>CONTACT US</h1>
@@ -110,13 +110,13 @@
                         <input type="text" class="form-control" placeholder="Enter your name">
                         <input type="email" class="form-control" placeholder="Enter your mail">
                         <textarea class="form-control" placeholder="Enter your message"></textarea>
-                        <button class="btn signin">Send Message</button>
+                        <button class="btn btn-primary" >Submit</button>
                     </form>
                 </div>
             </div>
         </div>
   </section>
-<footer>Copyrights @frontendforever 2021</footer>
+<footer>Copyrights to Tech_Buds</footer>
 
 
     
