--- a/User/Cart/cartnew.html
+++ b/User/Cart/cartnew.html
@@ -57,7 +57,7 @@
                   <div class="product-info">
                     <h3 class="product-name">Pedigree <a style = "font-size: 15px;" href="">View product</a></h3>
                     <h4 class="product-price">₹ 450</h4>
-                    <p class="product-quantity">Qnt: <input type="number" value="1" name="">
+                    <p class="product-quantity">Qty <input type="number" value="1" name="">
                       <p class="product-buy">
                         <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                         <span class="remove">Buy</span>
@@ -73,7 +73,7 @@
                   <div class="product-info">
                     <h3 class="product-name">Whiskas <a style = "font-size: 15px;" href="">View product</a></h3>
                     <h4 class="product-price">₹ 1,500</h4>
-                    <p class="product-quantity">Qnt: <input type="number" value="1" name="">
+                    <p class="product-quantity">Qty <input type="number" value="1" name="">
                     <p class="product-buy">
                         <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                         <span class="remove">Buy</span>
