--- a/User/Signs/usersignin.html
+++ b/User/Signs/usersignin.html
@@ -9,11 +9,11 @@
             <form>
             <input type="email" class="input-box" placeholder="Your Email">
             <input type="password" class="input-box" placeholder="Password">
-            <button type="button" class="signup-btn">Sign In</button>
+            <button class="signup-btn">Sign In</a></button>
             <hr>
             <p class="or">OR</p>
-            <button type="button" class="signup-btn">Sign Up</button>
-            <a style = "font-size: 15px;" href="/Admin/admin_login.html" style="text-decoration:none ; color: black;">Admin</a>
+            <button type="button" class="signup-btn"><a href="usersignup.html" style="text-decoration: none; color: white">Sign Up</a></button>
+            <a  href="/Admin/admin_login.html">Admin</a>
             </form>
         </div>
     </body>
