--- a/User/Signs/usersignup.html
+++ b/User/Signs/usersignup.html
@@ -14,7 +14,7 @@
             <button type="button" class="signup-btn">Sign Up</button>
             <hr>
             <p class="or">OR</p>
-            <button type="button" class="signup-btn"><a href="#usersignin.html">Sign In</button></a>
+            <button type="button" class="signup-btn"><a href="usersignin.html" style="text-decoration: none; color: white">Sign In</a></button>
             </form>
         </div>
     </body>
